# neptus

./: .classpath  .editorconfig  .gitattributes  .gitignore  .project  .travis.yml  BUILD.md  CHANGES.md  LICENSE.md  README.md  ant2html.xsl  build-elektronik.xml  build.gradle  build.xml  gradle.properties  gradlew.bat  groups  neptus-config.xml  neptus.bat  neptus.sh  project.config  settings.gradle
conf/: .gitignore  LSTS_domain.pddl  action-map.xml  checklist-fo-2col.xsl  checklist-fo.xsl  checklist-fo_old.xsl  gsm_aliases.tsv  ipUrl.ini  log4j.xml  log4j2.xml  logs-searcher.conf  neptus-coordinateSystems.xml  neptus-misc-systems.xml
dev-scripts/: addsvnkeywords.sh  grow_pot.sh
dev-utils/: eclipse-java-formater.props
helper-scripts/: batch-video-hud.sh  batchXYZ.sh  crash_report.sh  gather-day-logs.sh  script-log.sh  xyztiles.sh
javadoc/: overview-and-developers-guide.html  overview.html
legal/: CMOCEAN-LICENSE.txt  L2FProd-LICENSE.txt  Neptus-LICENSE.txt  hsqldb_lic.txt  jjstick-LICENSE.txt  looks-LICENSE.txt
libJNI/: joystick.txt
libJNI/europa/src/: CMakeLists.txt
libJNI/europa/src/src/: module.cc
maps/: benthos1.conf  benthos2.conf  benthos3.conf  benthos4.conf  benthos5.conf  benthos6.conf  lauv-noptilus-1.conf  lauv-noptilus-2.conf  lauv-noptilus-3.conf  manta-11.conf  manta-12.conf  manta-21.conf
missions/: Braganca.nmisz  Braganca_formation.nmisz  Cartagena.nmisz  Control-Tuning.nmisz  GUARDEX.nmisz  LIPA.nmisz  Madeira.nmisz  REP13-oscar.nmisz  REP13-troia.nmisz  REP13.nmisz  Sunfish.nmisz  aminhamissao.nmisz  mbari.nmisz  mvplanning-alfeite.nmisz  mvplanning-dms.nmisz  mvplanning-lsts.nmisz  mvplanning-sesimbra.nmisz  mvplanning-tests-20160718.nmisz  mvplanning-tests2.nmisz  mvplanning-uavs.nmisz  necsave-alfeite.nmisz  noptilus.nmisz  raia-abril2016.nmisz  rep18-areas.nmisz  seacatmk1-test.nmisz  setubal-alliance.nmisz  split.nmisz  testeVision.nmisz  teste_vision.nmisz  urready4os-cartagena.nmisz
src/: version.txt
srcShell/: grow_pot.sh  neptus.bat  neptus.sh  unixStartScript.txt  windowsStartScript.txt
vehicles-defs/: 03-apdr-1.nvcl  04-adamastor-vehicle-lsts.nvcl  04-pioneer.nvcl  04-squirtle-vehicle-lsts.nvcl  04-squirtle.nvcl  09-caravel.nvcl  09-caravela.nvcl  09-otter.nvcl  1000-durius-1.nvcl  19-lauv-seacon-1.nvcl  19-lauv-seacon-2.nvcl  19-lauv-seacon-3.nvcl  19-lauv-seacon-4.nvcl  20-lauv-xtreme-2.nvcl  2000-wavynos-echo-1.nvcl  2000-wavynos-imager-1.nvcl  2000-wavynos-imager-2.nvcl  2000-wavynos-listener-1.nvcl  21-lauv-noptilus-1.nvcl  21-lauv-noptilus-2.nvcl  21-lauv-noptilus-3.nvcl  21-turbot.nvcl  22-lauv-harald.nvcl  22-lauv-lsts-1.nvcl  22-lauv-xplore-1.nvcl  22-lauv-xplore-2.nvcl  22-lauv-xplore-3.nvcl  22-lauv-xplore-4.nvcl  22-lauv-xplore-5.nvcl  23-lauv-arpao.nvcl  23-lauv-nemo.nvcl  23-swordfish.nvcl  23-swordfish2.nvcl  25-fish.nvcl  26-duck1.nvcl  27-duck2.nvcl  28-duck3.nvcl  29-duck4.nvcl  30-folaga.nvcl  31-wg-lisa.nvcl  (+80 more)
(+8595 files in other folders)
